# gmailagent

./: .gitignore  README.md
gmail-mcp-server/: .gitignore  DEVELOPMENT_HISTORY.md  INTERDIMENSIONAL_TEAM_SPRINT.md  README.md  delete_all_spam.py  delete_spam_auto.py  extract_interdimensional_tasks.py  find_brian_emails.py  find_buddy_emails.py  fix_and_test_filtering.py  interdimensional_tasks.json  pyproject.toml  reauth_and_delete_spam.py  search_buddy_emails.py  search_loser_project_updates.py  setup.py  test_auth.py  test_delete_permission.py  troubleshoot_gmail_filter.py
gmail-mcp-server/docs/: audit-log-filter.txt  google-cloud-audit-filter.md
gmail-mcp-server/src/gmail_mcp/: auth.py  gmail_client.py  server.py
